# for_any

./: Cargo.toml
src/: lib.rs  utils.rs
src/for_any/: enum_field.rs  enum_variant.rs  mod.rs
tests/: result.rs
tests/pass/: basic_scenarios.rs  dynamic_types.rs  renaming.rs
