[package]
name = "for_any"
version = "0.0.1-beta.0"
authors = ["Dzenan Jupic <56133904+DzenanJupic@users.noreply.github.com>"]
edition = "2018"
description = "A derive macro to call a function on enum data, no matter which variant it has."
keywords = ["enum", "variant", "for", "any", "each"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/DzenanJupic/for_any"
documentation = "https://docs.rs/for_any"
include = ["src/**/*", "Cargo.toml"]

[lib]
proc-macro = true

[dependencies]
darling = "0.13.0"
quote = "1.0.9"
proc-macro2 = "1.0.27"
syn = { version = "1.0.73", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.42"
